--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>National Park Trip Planner</title>
+    <title>National Parks Trip Planner</title>
 </head>
 
 <body>
