updated microservice GET

--- a/public/motivation.html
+++ b/public/motivation.html
@@ -9,7 +9,7 @@
     <body>
         <p>Use the button below to receive a suggestion</h1>
 
-        <form action="http://localhost:3000/motivation" method="POST">
+        <form action="http://localhost:3000/motivation" method="GET">
             <button type="submit">Click for Help!</button>    
            
         </form>
